refactor: add new api endpoint for subopics data, change response format for topics endpoint (#23)
